--- a/frontend/style/register.css
+++ b/frontend/style/register.css
@@ -40,6 +40,32 @@ body {
         padding: 1.5rem 2rem;
         width: 90%;
     }
+
+    .form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(1px);
+        padding: 1.5rem 3rem;
+        border-radius: 15px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+        gap: 0.5rem;
+        max-width: 350px;
+        /* slightly reduced from 400 */
+        width: 80%;
+        margin: auto;
+    }
+
+    /* Form group styles */
+    .form-grp {
+        display: flex;
+        flex-direction: column;
+        width: 85%;
+        /* reduced from 95% */
+        margin: 0 auto;
+    }
+
 }
 
 @media (max-width: 600px) {
